tests/compiletests/ui/spirv-attr/multiple.stderr
error: only one intrinsic type attribute is allowed on a struct
   --> $DIR/multiple.rs:
    |
    | #[spirv(sampler, sampler)]
    |                  ^^^^^^^
    |
note: previous intrinsic type attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(sampler, sampler)]
    |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
   --> $DIR/multiple.rs:
    |
    | #[spirv(matrix, matrix)]
    |                 ^^^^^^
    |
note: previous intrinsic type attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(matrix, matrix)]
    |         ^^^^^^

error: only one intrinsic type attribute is allowed on a struct
   --> $DIR/multiple.rs:
    |
    | #[spirv(sampler, generic_image_type)]
    |                  ^^^^^^^^^^^^^^^^^^
    |
note: previous intrinsic type attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(sampler, generic_image_type)]
    |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
   --> $DIR/multiple.rs:
    |
    | #[spirv(sampler, matrix)]
    |                  ^^^^^^
    |
note: previous intrinsic type attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(sampler, matrix)]
    |         ^^^^^^^

error: only one #[spirv(block)] attribute is allowed on a struct
   --> $DIR/multiple.rs:
    |
    | #[spirv(block, block)]
    |                ^^^^^
    |
note: previous #[spirv(block)] attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(block, block)]
    |         ^^^^^

warning: #[spirv(block)] is no longer needed and should be removed
   --> $DIR/multiple.rs:
    |
    | #[spirv(block, block)]
    |         ^^^^^

error: only one entry-point attribute is allowed on a function
   --> $DIR/multiple.rs:
    |
    | #[spirv(vertex, vertex)]
    |                 ^^^^^^
    |
note: previous entry-point attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(vertex, vertex)]
    |         ^^^^^^

error: only one entry-point attribute is allowed on a function
   --> $DIR/multiple.rs:
    |
    | #[spirv(vertex, fragment)]
    |                 ^^^^^^^^
    |
note: previous entry-point attribute
   --> $DIR/multiple.rs:
    |
    | #[spirv(vertex, fragment)]
    |         ^^^^^^

error: only one storage class attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(uniform, uniform)] _same_storage_class: (),
    |                      ^^^^^^^
    |
note: previous storage class attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(uniform, uniform)] _same_storage_class: (),
    |             ^^^^^^^

error: only one storage class attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
    |                      ^^^^^^^^^^^^^
    |
note: previous storage class attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
    |             ^^^^^^^

error: only one builtin attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(position, position)] _same_builtin: (),
    |                       ^^^^^^^^
    |
note: previous builtin attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(position, position)] _same_builtin: (),
    |             ^^^^^^^^

error: only one builtin attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(position, vertex_index)] _diff_builtin: (),
    |                       ^^^^^^^^^^^^
    |
note: previous builtin attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(position, vertex_index)] _diff_builtin: (),
    |             ^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
    |                                 ^^^^^^^^^^^^^^^^^^
    |
note: previous #[spirv(descriptor_set)] attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
    |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
    |                                 ^^^^^^^^^^^^^^^^^^
    |
note: previous #[spirv(descriptor_set)] attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
    |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
    |                          ^^^^^^^^^^^
    |
note: previous #[spirv(binding)] attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
    |             ^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
    |                          ^^^^^^^^^^^
    |
note: previous #[spirv(binding)] attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
    |             ^^^^^^^^^^^

error: only one #[spirv(flat)] attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(flat, flat)] _flat: (),
    |                   ^^^^
    |
note: previous #[spirv(flat)] attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(flat, flat)] _flat: (),
    |             ^^^^

error: only one #[spirv(invariant)] attribute is allowed on a function param
   --> $DIR/multiple.rs:
    |
    |     #[spirv(invariant, invariant)] _invariant: (),
    |                        ^^^^^^^^^
    |
note: previous #[spirv(invariant)] attribute
   --> $DIR/multiple.rs:
    |
    |     #[spirv(invariant, invariant)] _invariant: (),
    |             ^^^^^^^^^

error: aborting due to 17 previous errors; 1 warning emitted

